Add: Glucose service functionality and UI
