# apps/api/src/modules/glucose/dto/response/getHighestGlucose.dto.ts
@@ -8,7 +8,7 @@ export class GetHighestGlucoseResponse {
       'Indicates whether sufficient data is available for calculation',
     example: true,
   })
-  sufficientData: boolean;
+  isDataSufficient: boolean;
 
   @ApiProperty({
     type: Number,
