# apps/api/src/modules/glucose/dto/response/getLowestGlucose.dto.ts
@@ -8,7 +8,7 @@ export class GetLowestGlucoseResponse {
       'Indicates whether sufficient data is available for calculation',
     example: true,
   })
-  sufficientData: boolean;
+  isDataSufficient: boolean;
 
   @ApiProperty({
     type: Number,
