# apps/api/src/swagger/api-schema.json
@@ -1201,7 +1201,7 @@
       "GetTimeInRangeResponse": {
         "type": "object",
         "properties": {
-          "sufficientData": {
+          "isDataSufficient": {
             "type": "boolean",
             "description": "Indicates whether sufficient data is available for calculation",
             "example": true
@@ -1238,7 +1238,7 @@
           }
         },
         "required": [
-          "sufficientData",
+          "isDataSufficient",
           "percentageHigh",
           "percentageAboveRange",
           "percentageInRange",
@@ -1249,7 +1249,7 @@
       "GetAverageGlucoseResponse": {
         "type": "object",
         "properties": {
-          "sufficientData": {
+          "isDataSufficient": {
             "type": "boolean",
             "description": "Indicates if there is sufficient data to calculate",
             "example": true
@@ -1275,7 +1275,7 @@
           }
         },
         "required": [
-          "sufficientData",
+          "isDataSufficient",
           "value",
           "unit"
         ]
@@ -1283,7 +1283,7 @@
       "GetHighestGlucoseResponse": {
         "type": "object",
         "properties": {
-          "sufficientData": {
+          "isDataSufficient": {
             "type": "boolean",
             "description": "Indicates whether sufficient data is available for calculation",
             "example": true
@@ -1309,7 +1309,7 @@
           }
         },
         "required": [
-          "sufficientData",
+          "isDataSufficient",
           "value",
           "unit"
         ]
@@ -1317,7 +1317,7 @@
       "GetLowestGlucoseResponse": {
         "type": "object",
         "properties": {
-          "sufficientData": {
+          "isDataSufficient": {
             "type": "boolean",
             "description": "Indicates whether sufficient data is available for calculation",
             "example": true
@@ -1343,7 +1343,7 @@
           }
         },
         "required": [
-          "sufficientData",
+          "isDataSufficient",
           "value",
           "unit"
         ]
